Criação das classes para criação do usuário e inclusão do dapper

--- a/DevTech/appsettings.Development.json
+++ b/DevTech/appsettings.Development.json
@@ -6,5 +6,8 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "KeyToken": "0XDwOaDpvSbg7lM81g4QJ0oiAGjItP2ljr2jgNFiwFw="
+    "KeyToken": "0XDwOaDpvSbg7lM81g4QJ0oiAGjItP2ljr2jgNFiwFw=",
+  "ConnectionStrings": {
+    "BaseIndicadores": "Server=localhost;Database=teste;Trusted_Connection=True;"
+  }
 }
