--- a/DevTech/appsettings.json
+++ b/DevTech/appsettings.json
@@ -7,5 +7,9 @@
         }
     },
     "AllowedHosts": "*",
-    "KeyToken": "0XDwOaDpvSbg7lM81g4QJ0oiAGjItP2ljr2jgNFiwFw="
+    "KeyToken": "0XDwOaDpvSbg7lM81g4QJ0oiAGjItP2ljr2jgNFiwFw=",
+  "ConnectionStrings": {
+
+    "BaseIndicadores": "Server=localhost;Database=db_rdo;Trusted_Connection=True;"
+  }
 }
